--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,9 +3,6 @@ Name=Text::Table::Manifold
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
-[V 0.90]
-Date=2015-01-27T13:31:00
-Comments= <<EOT
-- Development version.
-- Original version.
-EOT
+[V 1.00]
+Date=2015-01-31T19:00:00
+Comments=- Original version.
