Update Changelog.ini from Changes

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,16 @@
 [Module]
 Name=Text::Table::Manifold
-Changelog.Creator=Module::Metadata::Changes V 2.05
-Changelog.Parser=Config::IniFiles V 2.83
+Changelog.Creator=Module::Metadata::Changes V 2.12
+Changelog.Parser=Config::IniFiles V 2.94
+
+[V 1.01]
+Date=2018-11-22T09:55:00
+Comments= <<EOT
+- Update pre-reqs for deal with test failures for CPAN Testers.
+- Adopt new repo structure. For details, see
+http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.
+- Add t/00*.t
+EOT
 
 [V 1.00]
 Date=2015-01-31T19:00:00
