Update Changelog.ini from Changes

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,13 @@ Name=Text::Table::Manifold
 Changelog.Creator=Module::Metadata::Changes V 2.12
 Changelog.Parser=Config::IniFiles V 3.000003
 
+[V 1.03]
+Date=2021-02-07T17:38:00
+Comments= <<EOT
+- Update POD to change RT to github.
+- Reformat Makefile.PL.
+EOT
+
 [V 1.02]
 Date=2020-09-19T12:00:00
 Comments= <<EOT
