Update Changelog.ini from Changes

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,11 @@
 [Module]
 Name=Text::Table::Manifold
 Changelog.Creator=Module::Metadata::Changes V 2.12
-Changelog.Parser=Config::IniFiles V 3.000003
+Changelog.Parser=Config::IniFiles V 3.000002
+
+[V 1.04]
+Date=2021-05-24T17:48:00
+Comments=- Add Data::Table::Text to See Also. Suggested by Philip R Brenan.
 
 [V 1.03]
 Date=2021-02-07T17:38:00
